Enable automated sync policy for self

--- a/argocd/argocd-applications-application.yaml
+++ b/argocd/argocd-applications-application.yaml
@@ -12,3 +12,5 @@ spec:
     path: argocd
     repoURL: https://github.com/chrismlee42-dev/argocd-applications.git
     targetRevision: HEAD
+  syncPolicy:
+    automated: {}
