Enable pruning and self-healing

--- a/argocd/argocd-applications-application.yaml
+++ b/argocd/argocd-applications-application.yaml
@@ -13,4 +13,6 @@ spec:
     repoURL: https://github.com/chrismlee42-dev/argocd-applications.git
     targetRevision: HEAD
   syncPolicy:
-    automated: {}
+    automated:
+      prune: true
+      selfHeal: true
