Use in-cluster instead of local cluster URL

--- a/argocd/argocd-applications-application.yaml
+++ b/argocd/argocd-applications-application.yaml
@@ -5,8 +5,9 @@ metadata:
   namespace: argocd
 spec:
   destination:
+    name: in-cluster
     namespace: argocd
-    server: https://kubernetes.default.svc
+    # server: https://kubernetes.default.svc
   project: default
   source:
     path: argocd
