Add helm configuration from current deployment

--- a/argocd/argocd-config-application.yaml
+++ b/argocd/argocd-config-application.yaml
@@ -5,13 +5,31 @@ metadata:
   namespace: argocd
 spec:
   destination:
+    name: in-cluster
     namespace: argocd
-    server: https://kubernetes.default.svc
+    # server: https://kubernetes.default.svc
   project: default
-  source:
-    path: argocd
-    repoURL: https://github.com/chrismlee42-dev/argocd-config.git
-    targetRevision: HEAD
+  sources:
+    - path: argocd
+      ref: path
+      repoURL: https://github.com/chrismlee42-dev/argocd-config.git
+      targetRevision: HEAD
+    - chart: argo-cd
+      helm:
+        releaseName: argocd
+        valuesObject:
+          configs:
+            params:
+              server.insecure: true
+          global:
+            domain: argocd.service.clee.private.morphacy.net
+          server:
+            ingress:
+              annotations:
+                ingress.cilium.io/tls-passthrough: enabled
+      ref: helm
+      repoURL: https://argoproj.github.io/argo-helm
+      targetRevision: 7.9.0
   # syncPolicy:
   #   automated: {}
   #     # prune: true
