--- a/argocd/argocd-config-application.yaml
+++ b/argocd/argocd-config-application.yaml
@@ -30,7 +30,7 @@ spec:
       ref: helm
       repoURL: https://argoproj.github.io/argo-helm
       targetRevision: 7.9.0
-  # syncPolicy:
-  #   automated: {}
-  #     # prune: true
-  #     # selfHeal: true
+  syncPolicy:
+    automated: {}
+      # prune: true
+      # selfHeal: true
