--- a/argocd/argocd-config-application.yaml
+++ b/argocd/argocd-config-application.yaml
@@ -31,6 +31,6 @@ spec:
       repoURL: https://argoproj.github.io/argo-helm
       targetRevision: 7.9.0
   syncPolicy:
-    automated: {}
-      # prune: true
-      # selfHeal: true
+    automated:
+      prune: true
+      selfHeal: true
