--- a/argocd/vault-config-application.yaml
+++ b/argocd/vault-config-application.yaml
@@ -54,3 +54,10 @@ spec:
     automated:
       prune: true
       selfHeal: true
+  ignoreDifferences:
+    - group: admissionregistration.k8s.io/v1
+      kind: MutatingWebhookConfiguration
+      name: vault-agent-injector-config
+      jqPathExpressions:
+        # Set by Vault itself
+        - '.webhooks[]?.clientConfig.caBundle'
