--- a/argocd/vault-config-application.yaml
+++ b/argocd/vault-config-application.yaml
@@ -54,8 +54,10 @@ spec:
     automated:
       prune: true
       selfHeal: true
+    syncOptions:
+      - RespectIgnoreDifferences=true
   ignoreDifferences:
-    - group: admissionregistration.k8s.io/v1
+    - group: admissionregistration.k8s.io
       kind: MutatingWebhookConfiguration
       name: vault-agent-injector-config
       jqPathExpressions:
