--- a/argocd/vault-config-application.yaml
+++ b/argocd/vault-config-application.yaml
@@ -57,9 +57,7 @@ spec:
     syncOptions:
       - RespectIgnoreDifferences=true
   ignoreDifferences:
-    - group: admissionregistration.k8s.io
-      kind: MutatingWebhookConfiguration
-      name: vault-agent-injector-config
-      jqPathExpressions:
-        # Set by Vault itself
-        - '.webhooks[]?.clientConfig.caBundle'
+    - group: '*'
+      kind: '*'
+      managedFieldsManagers:
+        - vault-k8s
