Correct vault namespace

--- a/argocd/vault-config-application.yaml
+++ b/argocd/vault-config-application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: argocd
+    namespace: vault
   project: default
   sources:
     - path: argocd
