--- a/argocd/keycloak-config-application.yaml
+++ b/argocd/keycloak-config-application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: argocd
+    namespace: keycloak
     # server: https://kubernetes.default.svc
   project: default
   sources:
