--- a/argocd/cert-manager-application.yaml
+++ b/argocd/cert-manager-application.yaml
@@ -56,7 +56,7 @@ spec:
             type: ClusterIP
             port: 443
       ref: helm-webhook
-      repoURL: oci://ghcr.io/waldner/charts/cert-manager-webhook-he
+      repoURL: ghcr.io/waldner/charts/cert-manager-webhook-he
       targetRevision: 0.0.6
   syncPolicy:
     automated:
