--- a/argocd/cert-manager-application.yaml
+++ b/argocd/cert-manager-application.yaml
@@ -36,7 +36,7 @@ spec:
       ref: helm
       repoURL: https://charts.jetstack.io
       targetRevision: v1.15.2
-    - chart : cert-manager-webhook-he
+    - chart: cert-manager-webhook-he
       helm:
         releaseName: cert-manager-webhook-he
         valuesObject:
@@ -56,7 +56,7 @@ spec:
             type: ClusterIP
             port: 443
       ref: helm-webhook
-      repoURL: ghcr.io/waldner/charts/cert-manager-webhook-he
+      repoURL: ghcr.io/waldner/charts
       targetRevision: "0.0.6"
   syncPolicy:
     automated:
