--- a/argocd/cilium-config-application.yaml
+++ b/argocd/cilium-config-application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: cilium
+    namespace: kube-system
   project: default
   sources:
     - path: argocd
