Remove superfluous trailing URL delimiter from external-dns chart repo URL

--- a/argocd/external-dns-config-application.yaml
+++ b/argocd/external-dns-config-application.yaml
@@ -48,7 +48,7 @@ spec:
             - ingress
             - service
       ref: helm
-      repoURL: https://kubernetes-sigs.github.io/external-dns/
+      repoURL: https://kubernetes-sigs.github.io/external-dns
       targetRevision: "1.16.1"
   syncPolicy:
     automated:
