--- a/argocd/keycloak-config-application.yaml
+++ b/argocd/keycloak-config-application.yaml
@@ -1,36 +1,36 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: keycloak
-  namespace: argocd
-spec:
-  destination:
-    name: in-cluster
-    namespace: keycloak
-    # server: https://kubernetes.default.svc
-  project: default
-  sources:
-    - path: argocd
-      ref: path
-      repoURL: https://github.com/chrismlee42-dev/keycloak-config.git
-      targetRevision: HEAD
-    # - chart: argo-cd
-    #   helm:
-    #     releaseName: argocd
-    #     valuesObject:
-    #       configs:
-    #         params:
-    #           server.insecure: true
-    #       global:
-    #         domain: argocd.service.clee.private.morphacy.net
-    #       server:
-    #         ingress:
-    #           annotations:
-    #             ingress.cilium.io/tls-passthrough: enabled
-    #   ref: helm
-    #   repoURL: https://argoproj.github.io/argo-helm
-    #   targetRevision: 7.9.0
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: keycloak
+#   namespace: argocd
+# spec:
+#   destination:
+#     name: in-cluster
+#     namespace: keycloak
+#     # server: https://kubernetes.default.svc
+#   project: default
+#   sources:
+#     - path: argocd
+#       ref: path
+#       repoURL: https://github.com/chrismlee42-dev/keycloak-config.git
+#       targetRevision: HEAD
+#     # - chart: argo-cd
+#     #   helm:
+#     #     releaseName: argocd
+#     #     valuesObject:
+#     #       configs:
+#     #         params:
+#     #           server.insecure: true
+#     #       global:
+#     #         domain: argocd.service.clee.private.morphacy.net
+#     #       server:
+#     #         ingress:
+#     #           annotations:
+#     #             ingress.cilium.io/tls-passthrough: enabled
+#     #   ref: helm
+#     #   repoURL: https://argoproj.github.io/argo-helm
+#     #   targetRevision: 7.9.0
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
