Update netbox to preserve postgres secret

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -32,6 +32,10 @@ spec:
             sslMode: prefer
             targetSessionAttrs: read-write
             username: netbox
+          postgresql:
+            auth:
+              existingSecret: netbox-postgres
+            enabled: true
           service:
             type: ClusterIP
             # type: LoadBalancer
