Correct misspelling of netbox postgres secret

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -34,7 +34,7 @@ spec:
             username: netbox
           postgresql:
             auth:
-              existingSecret: netbox-postgres
+              existingSecret: netbox-postgresql
             enabled: true
           service:
             type: ClusterIP
