Update netbox to ignore differences in postgresql secret

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -50,3 +50,8 @@ spec:
     automated:
       prune: true
       selfHeal: false
+  ignoreDifferences:
+    - group: core
+      kind: Secret
+      name: netbox-postgresql
+      namespace: netbox
