--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -50,6 +50,8 @@ spec:
     automated:
       prune: true
       selfHeal: false
+    syncOptions:
+      - RespectIgnoreDifferences=true
   ignoreDifferences:
     - group: core
       kind: Secret
