Correct misspelled netbox postgresql existing secret name

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -25,7 +25,7 @@ spec:
             # database: netbox
             disableServerSideCursors: false
             # existingSecretKey: password
-            existingSecretName: netbox-postgres
+            existingSecretName: netbox-postgresql
             # host: ~
             # password: ~
             port: 5432
