Further troubleshoot netbox postgresql secret issue

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -53,7 +53,7 @@ spec:
     syncOptions:
       - RespectIgnoreDifferences=true
   ignoreDifferences:
-    - # group: core
+    - group: core
       kind: Secret
       name: netbox-postgresql
       namespace: netbox
