Add ignoreDifferences for netbox postgresql tls Secret

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -66,6 +66,12 @@ spec:
         - /data
     - # group: core
       kind: Secret
+      name: postgresql-tls
+      namespace: netbox
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
       name: postgresql-user
       namespace: netbox
       jsonPointers:
