--- a/argocd/valkey-operator-config-application.yaml
+++ b/argocd/valkey-operator-config-application.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   destination:
     name: in-cluster
-    namespace: valkey-operator
+    namespace: valkey-operator-system
     # server: https://kubernetes.default.svc
   project: default
   sources:
