Disable self-healing and pruning for netbox while troubleshooting

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -53,8 +53,8 @@ spec:
     #   targetRevision: 5.0.0-beta.67
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
     syncOptions:
       - RespectIgnoreDifferences=true
   ignoreDifferences:
