--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -60,6 +60,12 @@ spec:
   ignoreDifferences:
     - # group: core
       kind: Secret
+      name: postgresql-app
+      namespace: netbox
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
       name: postgresql-superuser
       namespace: netbox
       jsonPointers:
