Re-add netbox application

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -1,96 +1,96 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: netbox
-#   namespace: argocd
-# spec:
-#   destination:
-#     name: in-cluster
-#     namespace: netbox
-#     # server: https://kubernetes.default.svc
-#   project: default
-#   sources:
-#     - path: argocd
-#       ref: path
-#       repoURL: https://github.com/chrismlee42-dev/netbox-config.git
-#       targetRevision: HEAD
-#     # - chart: netbox
-#     #   helm:
-#     #     releaseName: netbox
-#     #     valuesObject:
-#     #       # cachingRedis:
-#     #       #   host: ~
-#     #       externalDatabase:
-#     #         connMaxAge: 300
-#     #         # database: netbox
-#     #         disableServerSideCursors: false
-#     #         # existingSecretKey: password
-#     #         existingSecretName: netbox-postgresql
-#     #         # host: ~
-#     #         # password: ~
-#     #         port: 5432
-#     #         sslMode: prefer
-#     #         targetSessionAttrs: read-write
-#     #         username: netbox
-#     #       global:
-#     #         postgresql:
-#     #           auth:
-#     #             existingSecret: netbox-postgresql
-#     #           secretKeys:
-#     #             adminPasswordKey: postgres-password
-#     #             userPasswordKey: password
-#     #       postgresql:
-#     #         enabled: true
-#     #       service:
-#     #         type: ClusterIP
-#     #         # type: LoadBalancer
-#     #       superuser:
-#     #         existingSecret: netbox-superuser-config
-#     #       # taskRedis:
-#     #       #   host: ~
-#     #   ref: helm
-#     #   repoURL: ghcr.io/netbox-community/netbox-chart
-#     #   targetRevision: 5.0.0-beta.67
-#   syncPolicy:
-#     automated:
-#       prune: false
-#       selfHeal: false
-#     syncOptions:
-#       - RespectIgnoreDifferences=true
-#   ignoreDifferences:
-#     - # group: core
-#       kind: Secret
-#       name: netbox-config
-#       namespace: netbox
-#       jsonPointers:
-#         - /data
-#     - # group: core
-#       kind: Secret
-#       name: netbox-superuser
-#       namespace: netbox
-#       jsonPointers:
-#         - /data
-#     - # group: core
-#       kind: Secret
-#       name: postgresql-app
-#       namespace: netbox
-#       jsonPointers:
-#         - /data
-#     - # group: core
-#       kind: Secret
-#       name: postgresql-superuser
-#       namespace: netbox
-#       jsonPointers:
-#         - /data
-#     - # group: core
-#       kind: Secret
-#       name: postgresql-tls
-#       namespace: netbox
-#       jsonPointers:
-#         - /data
-#     - # group: core
-#       kind: Secret
-#       name: postgresql-user
-#       namespace: netbox
-#       jsonPointers:
-#         - /data
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: netbox
+  namespace: argocd
+spec:
+  destination:
+    name: in-cluster
+    namespace: netbox
+    # server: https://kubernetes.default.svc
+  project: default
+  sources:
+    - path: argocd
+      ref: path
+      repoURL: https://github.com/chrismlee42-dev/netbox-config.git
+      targetRevision: HEAD
+    # - chart: netbox
+    #   helm:
+    #     releaseName: netbox
+    #     valuesObject:
+    #       # cachingRedis:
+    #       #   host: ~
+    #       externalDatabase:
+    #         connMaxAge: 300
+    #         # database: netbox
+    #         disableServerSideCursors: false
+    #         # existingSecretKey: password
+    #         existingSecretName: netbox-postgresql
+    #         # host: ~
+    #         # password: ~
+    #         port: 5432
+    #         sslMode: prefer
+    #         targetSessionAttrs: read-write
+    #         username: netbox
+    #       global:
+    #         postgresql:
+    #           auth:
+    #             existingSecret: netbox-postgresql
+    #           secretKeys:
+    #             adminPasswordKey: postgres-password
+    #             userPasswordKey: password
+    #       postgresql:
+    #         enabled: true
+    #       service:
+    #         type: ClusterIP
+    #         # type: LoadBalancer
+    #       superuser:
+    #         existingSecret: netbox-superuser-config
+    #       # taskRedis:
+    #       #   host: ~
+    #   ref: helm
+    #   repoURL: ghcr.io/netbox-community/netbox-chart
+    #   targetRevision: 5.0.0-beta.67
+  syncPolicy:
+    automated:
+      prune: false
+      selfHeal: false
+    syncOptions:
+      - RespectIgnoreDifferences=true
+  ignoreDifferences:
+    - # group: core
+      kind: Secret
+      name: netbox-config
+      namespace: netbox
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
+      name: netbox-superuser
+      namespace: netbox
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
+      name: postgresql-app
+      namespace: netbox
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
+      name: postgresql-superuser
+      namespace: netbox
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
+      name: postgresql-tls
+      namespace: netbox
+      jsonPointers:
+        - /data
+    - # group: core
+      kind: Secret
+      name: postgresql-user
+      namespace: netbox
+      jsonPointers:
+        - /data
