--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -53,8 +53,8 @@ spec:
     #   targetRevision: 5.0.0-beta.67
   syncPolicy:
     automated:
-      prune: false
-      selfHeal: false
+      prune: true
+      selfHeal: true
     syncOptions:
       - RespectIgnoreDifferences=true
   ignoreDifferences:
