Set argocd redis compression param to none

--- a/argocd/argocd-config-application.yaml
+++ b/argocd/argocd-config-application.yaml
@@ -20,6 +20,7 @@ spec:
         valuesObject:
           configs:
             params:
+              redis.compression: none
               server.enable.gzip: true
               server.insecure: true
           global:
