--- a/argocd/argocd-config-application.yaml
+++ b/argocd/argocd-config-application.yaml
@@ -20,7 +20,7 @@ spec:
         valuesObject:
           configs:
             params:
-              redis.compression: none
+              redis.compression: gzip
               server.enable.gzip: true
               server.insecure: true
           global:
