Disable self-heal and prune for argocd while migrating away from helm-based deployment

--- a/argocd/argocd-config-application.yaml
+++ b/argocd/argocd-config-application.yaml
@@ -33,5 +33,5 @@ spec:
       targetRevision: 8.1.2
   syncPolicy:
     automated:
-      prune: true
-      selfHeal: true
+      prune: false
+      selfHeal: false
