Add custom annotation to support using ignoreDifferences from the resource manifest instead of the Application

--- a/argocd/netbox-config-application.yaml
+++ b/argocd/netbox-config-application.yaml
@@ -58,6 +58,20 @@ spec:
     syncOptions:
       - RespectIgnoreDifferences=true
   ignoreDifferences:
+    - group: '*'
+      kind: '*'
+      jqPathExpressions:
+        - |
+          def parsePath(pathStr):
+            (pathStr | split(".")[1:]) as $parts | $parts | map(
+              if test("^\\w+\\[\\d+\\]$") then
+                capture("(?<key>\\w+)\\[(?<index>\\d+)\\]") | [.key, (.index | tonumber)]
+              else
+                [.]
+              end
+            ) | add
+          ;
+          . as $root | .metadata?.annotations?["custom.argocd.argoproj.io/ignore-path"] as $path | $root | getpath(parsePath($path))
     - # group: core
       kind: Secret
       name: netbox-config
