Convert external-secrets installation to use helm

--- a/argocd/external-secrets-config.yaml
+++ b/argocd/external-secrets-config.yaml
@@ -10,10 +10,17 @@ spec:
     # server: https://kubernetes.default.svc
   project: default
   sources:
-    - path: argocd
-      ref: path
-      repoURL: https://github.com/chrismlee42-dev/external-secrets-config.git
-      targetRevision: HEAD
+    - chart: external-secrets
+      helm:
+        releaseName: external-secrets
+        valuesObject: {}
+      ref: helm
+      repoURL: https://charts.external-secrets.io/external-secrets
+      targetRevision: "v0.19.1"
+    # - path: argocd
+    #   ref: path
+    #   repoURL: https://github.com/chrismlee42-dev/external-secrets-config.git
+    #   targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
