Correct external-secrets chart repo URL

--- a/argocd/external-secrets-config.yaml
+++ b/argocd/external-secrets-config.yaml
@@ -15,7 +15,7 @@ spec:
         releaseName: external-secrets
         valuesObject: {}
       ref: helm
-      repoURL: https://charts.external-secrets.io/external-secrets
+      repoURL: https://charts.external-secrets.io
       targetRevision: "v0.19.1"
     # - path: argocd
     #   ref: path
