Re-enable external-secrets path source

--- a/argocd/external-secrets-config.yaml
+++ b/argocd/external-secrets-config.yaml
@@ -17,10 +17,10 @@ spec:
       ref: helm
       repoURL: https://charts.external-secrets.io
       targetRevision: "v0.19.1"
-    # - path: argocd
-    #   ref: path
-    #   repoURL: https://github.com/chrismlee42-dev/external-secrets-config.git
-    #   targetRevision: HEAD
+    - path: argocd
+      ref: path
+      repoURL: https://github.com/chrismlee42-dev/external-secrets-config.git
+      targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
