--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -26,6 +26,7 @@ spec:
       selfHeal: true
     syncOptions:
       - RespectIgnoreDifferences=true
+      - ServerSideApply=true
   # ignoreDifferences:
   #   - group: '*'
   #     kind: '*'
