--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -29,17 +29,23 @@ spec:
       - RespectIgnoreDifferences=true
       - ServerSideApply=true
   ignoreDifferences:
-    - group: '*'
-      kind: '*'
-      jqPathExpressions:
-        - |
-          def parsePath(pathStr):
-            (pathStr | split(".")[1:]) as $parts | $parts | map(
-              if test("^\\w+\\[\\d+\\]$") then
-                capture("(?<key>\\w+)\\[(?<index>\\d+)\\]") | [.key, (.index | tonumber)]
-              else
-                [.]
-              end
-            ) | add
-          ;
-          . as $root | .metadata?.annotations?["custom.argocd.argoproj.io/ignore-path"] as $path | $root | getpath(parsePath($path))
+    # - group: '*'
+    #   kind: '*'
+    #   jqPathExpressions:
+    #     - |
+    #       def parsePath(pathStr):
+    #         (pathStr | split(".")[1:]) as $parts | $parts | map(
+    #           if test("^\\w+\\[\\d+\\]$") then
+    #             capture("(?<key>\\w+)\\[(?<index>\\d+)\\]") | [.key, (.index | tonumber)]
+    #           else
+    #             [.]
+    #           end
+    #         ) | add
+    #       ;
+    #       . as $root | .metadata?.annotations?["custom.argocd.argoproj.io/ignore-path"] as $path | $root | getpath(parsePath($path))
+    - # group: core
+      kind: Secret
+      name: github-config
+      namespace: github-actions-runner-controller
+      jsonPointers:
+        - /data
