--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -29,6 +29,7 @@ spec:
             namespace: github-actions-runner-controller
             name: github-actions-runner-controller-gha-rs-controller
           githubConfigSecret: github-config
+          githubConfigUrl: https://github.com/chrismlee42
       ref: helm-runner
       repoURL: ghcr.io/actions/actions-runner-controller-charts
       targetRevision: 0.12.1
